# wireless-mnist-crawler

./: .env.example  .gitignore  EVAL_RESULTS.md  README.md  eval_results.py  pyproject.toml  run_batch.sh
migrations/: 001_initial.sql  002_paper_list_verification.sql  003_paper_text_enrichment.sql  004_scope_assessments.sql  005_agentic_paper_analysis.sql  006_paper_input_readiness.sql  007_resolver_cache_and_reflection.sql  008_wireless_candidates_and_gold.sql  009_dataset_extraction_fields.sql  010_dataset_availability_url.sql
scripts/: evaluate_coverage.py
src/wireless_taxonomy/: __init__.py  cli.py  config.py  db.py  evidence.py  llm.py  models.py  pipeline.py  textnorm.py
src/wireless_taxonomy/analyze/: __init__.py  abstracts.py  acm_browser.py  agentic_paper.py  agentic_search.py  availability.py  cache.py  candidates.py  dataset_extractor.py  dataset_usage.py  datasets.py  full_text.py  full_text_resolvers.py  local_pdfs.py  metadata.py  modality_osi.py  oa_availability.py  openalex.py  paper_text.py  pdf_text.py  readiness.py  reflection.py  scope.py  text_match.py  wireless.py
src/wireless_taxonomy/commands/: _shared.py  admin.py  cache.py  classify.py  coverage.py  eval.py  extract.py  merge.py  reconcile.py
src/wireless_taxonomy/eval/: overlap.py  standalone.py
src/wireless_taxonomy/evaluate/: __init__.py  jaccard.py  matching.py  run_diff.py
src/wireless_taxonomy/export/: __init__.py  json_export.py  paper_set.py  schemas.py  spreadsheet.py
src/wireless_taxonomy/ingest/: __init__.py  adapters.py  base.py  bibtex.py  clean_page.py  csv.py  dblp.py  gold.py  url.py  verify.py
src/wireless_taxonomy/postprocess/: entity_resolution.py
src/wireless_taxonomy/resolve/: __init__.py  cache.py  (+2 more)
tests/: test_abstracts.py  test_candidates_eval.py  test_cli.py  test_config.py  test_dataset_extractor.py  test_db.py  test_dblp.py  test_entity_resolution.py  test_export.py  test_ingest.py  test_keyword_classifier.py  test_llm_retry.py  test_matching.py  test_oa_availability.py  test_openalex.py  test_paper_set.py  test_pipeline.py  test_run_diff.py  test_standalone_eval.py  test_verify.py
tests/fixtures/: example_paper_page.html  full_text_landing.html  manual_papers.csv  sample.bib  sample_papers.csv  sigcomm_2024_accepted.html  sigcomm_2025_papers_info.html  sigcomm_2025_program_style.html
(+3 files in other folders)
