[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wireless-taxonomy"
version = "0.1.0"
description = "Accuracy-first CLI for evaluating automated wireless-paper classification against a curated gold set."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "click>=8.1",
  "pypdf>=3.0",
]

[project.optional-dependencies]
# Only needed to import gold sheets saved as .xlsx; CSV needs nothing extra.
xlsx = [
  "openpyxl>=3.1",
]
# Optional, best-effort ACM Digital Library abstract scrape (IMC/SIGCOMM). ACM
# is Cloudflare-protected so this is a last resort, off unless
# WIRELESS_TAXONOMY_ACM_BROWSER=1. Run `playwright install chromium` after.
acm = [
  "playwright>=1.40",
]

[project.scripts]
wireless-taxonomy = "wireless_taxonomy.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
